--- a/Tensor/6-1卷积神经网络应用于MNIST数据集分类.ipynb
+++ b/Tensor/6-1卷积神经网络应用于MNIST数据集分类.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,16 @@
       "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
       "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
       "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "Iter 0Testing Accuracy=0.9623\n",
+      "Iter 1Testing Accuracy=0.9761\n",
+      "Iter 2Testing Accuracy=0.9827\n",
+      "Iter 3Testing Accuracy=0.9828\n",
+      "Iter 4Testing Accuracy=0.9842\n",
+      "Iter 5Testing Accuracy=0.9869\n",
+      "Iter 6Testing Accuracy=0.9882\n",
+      "Iter 7Testing Accuracy=0.9896\n",
+      "Iter 8Testing Accuracy=0.9897\n"
      ]
     }
    ],
