整理文件夹

--- a/TextbookExercise/exercise2_5叠加等边三角行.ipynb
+++ b/TextbookExercise/exercise2_5叠加等边三角行.ipynb
@@ -8,6 +8,17 @@
    },
    "outputs": [],
    "source": [
+    "import turtle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import turtle\n",
     "turtle.seth(0)\n",
     "turtle.fd(100)\n",
@@ -22,15 +33,14 @@
     "turtle.seth(120)\n",
     "turtle.fd(200)\n",
     "turtle.seth(240)\n",
-    "turtle.fd(200)"
+    "turtle.fd(200)\n",
+    "turtle.done()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import turtle\n",
@@ -53,7 +63,8 @@
     "turtle.setx(px + 50)\n",
     "turtle.sety(100 * math.sin(math.pi / 3))\n",
     "turtle.pendown()\n",
-    "drawTriangle(100, 0, 240)\n"
+    "drawTriangle(100, 0, 240)\n",
+    "turtle.done()"
    ]
   },
   {
