add exercise4_5 and exercise5_1

--- a/TextbookExercise/exercise4_5猜数游戏续.ipynb
+++ b/TextbookExercise/exercise4_5猜数游戏续.ipynb
@@ -28,6 +28,35 @@
     "        print('遗憾，太小了')\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from random import *\n",
+    "p = randint(0,100)\n",
+    "count = 0;\n",
+    "try:\n",
+    "    while True:\n",
+    "        n = eval(input('请输入一个0-100之间的整数：'))\n",
+    "        count += 1\n",
+    "        if n > p:\n",
+    "            print('遗憾，太大了')\n",
+    "        elif n == p:\n",
+    "            print('预测{}次，你猜中了！'.format(count))\n",
+    "            break\n",
+    "        else:\n",
+    "            print('遗憾，太小了')  \n",
+    "except NameError:\n",
+    "        print(\"输入错误，请输入一个整数！\")\n",
+    "else:\n",
+    "    \n",
+    "        "
+   ]
   }
  ],
  "metadata": {
