--- a/Tensor/7-2递归神经网络RNN.ipynb
+++ b/Tensor/7-2递归神经网络RNN.ipynb
@@ -19,13 +19,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From <ipython-input-2-562069f6c8bf>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From e:\\program files\\python\\python36-32\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From e:\\program files\\python\\python36-32\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From e:\\program files\\python\\python36-32\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
       "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From e:\\program files\\python\\python36-32\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
       "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
       "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
-      "Iter 0, Testing Accuracy= 0.6141\n",
-      "Iter 1, Testing Accuracy= 0.7247\n",
-      "Iter 2, Testing Accuracy= 0.8126\n"
+      "WARNING:tensorflow:From e:\\program files\\python\\python36-32\\lib\\site-packages\\tensorflow\\contrib\\learn\\python\\learn\\datasets\\mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "Iter 0, Testing Accuracy= 0.6732\n",
+      "Iter 1, Testing Accuracy= 0.7227\n",
+      "Iter 2, Testing Accuracy= 0.8155\n"
      ]
     }
    ],
@@ -68,7 +86,7 @@
     "#计算RNN的返回结果\n",
     "prediction= RNN(x, weights, biases)  \n",
     "#损失函数\n",
-    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=prediction,labels=y))\n",
+    "cross_entropy = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=prediction,labels=y))\n",
     "#使用AdamOptimizer进行优化\n",
     "train_step = tf.train.AdamOptimizer(1e-4).minimize(cross_entropy)\n",
     "#结果存放在一个布尔型列表中\n",
@@ -92,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -116,7 +132,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
